--- a/main.html
+++ b/main.html
@@ -31,22 +31,21 @@
         </tbody>
     </table>
 
-    <!-- Heading before the ordered list -->
+   
     <h2>List of Medias</h2>
 
-    <!-- Ordered list with media items -->
     <ol>
         <li>
             <img src="https://picsum.photos/id/123/200/300" alt="Random image from Picsum with ID 123">
         </li>
         <li>
-            <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-                <!-- Your browser does not support the video tag. -->
+            <video controls>
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
             </video>
         </li>
         <li>
-            <audio  src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-                <!-- Your browser does not support the audio element. -->
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
             </audio>
         </li>
     </ol>
