--- a/main.html
+++ b/main.html
@@ -8,46 +8,56 @@
 
 <body>
 	
-	 <table>
-        <thead>
-            <tr>
-                <th>Roll Number</th>
-                <th>Name</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>John Doe</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Jane Smith</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Bob Johnson</td>
-            </tr>
-        </tbody>
+	 <section>
+    <h2>Roll numbers and Names</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Roll Number</th>
+          <th>Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>John Doe</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Jane Smith</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Michael Johnson</td>
+        </tr>
+      </tbody>
     </table>
+  </section>
 
-   
-    <h2>List of Medias</h2>
 
-    <ol>
-        <li>
-            <img src="https://picsum.photos/id/123/200/300" alt="Random image from Picsum with ID 123">
-        </li>
-        <li>
-            <video controls>
-                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" alt="img1">
-            </video>
-        </li>
-        <li>
-            <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-            </audio>
-        </li>
-    </ol>
+  <h2>List of medias</h2>
+
+
+  <ol>
+    <li>
+      <p>Image: <img src="https://picsum.photos/id/123/200/300" alt="Random Image"></p>
+    </li>
+    <li>
+      <p>Video:
+        <video width="320" height="240" controls>
+          <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </p>
+    </li>
+    <li>
+      <p>Audio:
+        <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
+          Your browser does not support the audio tag.
+        </audio>
+      </p>
+    </li>
+  </ol>
 
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
